nlamah/src/main/resources/org/nlamah/QL/test/error/identifierAndExpressionTypeMismatch.ql
form test
{
	question1 boolean "test1"
	
	question2 number "test2" question1 + 200
}